# MAI_Final_Project

./: .gitignore  Charades_test_mini.json  MovieNet_Gemini_100_dataset.json  README.md  clip_MovieNet_coarse_only.py  pyproject.toml  qwen2_MovieNet.py  qwen2_MovieNet_coarse_to_fine.py  qwen2_charades_embedding.py  qwen2_charades_eval.py  qwen2_charades_original.py  qwen2_charades_total_frame.py  requirements.txt
eval/: qwen2_vl_7b_mr.py
