[project]
name = "mai-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python==4.12.0.88",
    "numpy==2.0.2",
    "accelerate>=0.32.1",
    "transformers>=4.35.0",
    "Pillow>=10.0.0",
    "torch>=2.4.1",
    "qwen_vl_utils==0.0.14",
    "tqdm>=4.65.0",
    "gdown>=4.7.1",
    "bitsandbytes==0.48.2"

]
